--- a/5я.md
+++ b/5я.md
@@ -1,7 +1,7 @@
-a1=int(input('введите координаты точек X у точки A'))
-b1=int(input('введите координаты точек Y у точки A'))
-a2=int(input('введите координаты точек X у точки B'))
-b2=int(input('введите координаты точек Y у точки B'))
+a1=int(input('введите координаты точки X у точки A'))
+b1=int(input('введите координаты точки Y у точки A'))
+a2=int(input('введите координаты точки X у точки B'))
+b2=int(input('введите координаты точки Y у точки B'))
 m1=abs(a1-a2)
 m2=abs(b1-b2)
 s=(m1**2+m2**2)**0.5
