--- a/5я.md
+++ b/5я.md
@@ -15,7 +15,7 @@ bc=abs(b-c)
 abc=bc+ac
 print('длина ас = ',ac)
 print('длина bc = ',bc)
-print('сумма длин ас и b = ',abc)
+print('сумма длин ас и bс = ',abc)
 
 
 print('Точка C расположена между точками A и B.')
