--- a/7я.md
+++ b/7я.md
@@ -43,6 +43,4 @@ c2=int(input('введите C2 '))
 y=(c1*a2-c2*a1)/(a2*b1-a1*b2)
 if ((c1-b1*y)/a1) == ((c2-b2*y)/a2):
     x=(c1-b1*y)/a1
-    print('X = ',x,'Y = ',y)
-
-
+    print('X = ',x,'Y = ',y)!!!!!!!!
