--- a/8я.md
+++ b/8я.md
@@ -17,7 +17,8 @@ b=int(input('vvedite dliny otrezka B '))
 c=a/b
 a=int(c)
 b=c-a
-print(b,' ostatochek')
+b=
+print(b,' ostatochek')!!!!!!!!!
 
 
 a=int(input('vvedite dvyznachnoe chislo '))
