--- a/8я.md
+++ b/8я.md
@@ -16,8 +16,8 @@ a=int(input('vvedite dliny otrezka A, na kotorom bydyt raspologatsia otrezki dli
 b=int(input('vvedite dliny otrezka B '))
 c=a/b
 a=int(c)
-b=c-a
-b=
+o=c-a
+b=int(o*b)
 print(b,' ostatochek')!!!!!!!!!
 
 
