--- a/7я.md
+++ b/7я.md
@@ -36,11 +36,10 @@ print('A1·x + B1·y = C1')
 print('A2·x + B2·y = C2')
 a1=int(input('введите значение коэффициента A1 '))
 b1=int(input('введите значение коэффициента B1 '))
+c1=int(input('введите C1 '))
 a2=int(input('введите значение коэффициента A2 '))
 b2=int(input('введите значение коэффициента B2 '))
-c1=int(input('введите C1 '))
 c2=int(input('введите C2 '))
 y=(c1*a2-c2*a1)/(a2*b1-a1*b2)
-if ((c1-b1*y)/a1) == ((c2-b2*y)/a2):
-    x=(c1-b1*y)/a1
-    print('X = ',x,'Y = ',y)!!!!!!!!
+x=(c1-b1*y)/a1
+print('X = ',x,'Y = ',y)
