--- a/11я.md
+++ b/11я.md
@@ -1,74 +1,97 @@
-import math
-a=int(input('введите число секунд (целое) '))
-b=a/60
-c=int(b)
-i=b-c
-a=math.ceil(60*i)
-print('убрав минутные отрезки, останетс ',a,' секунд')
-
-
-a=int(input('vvedite kolichestvo dnei v promezhytke ot 1 do 365: '))
-b=a/7
-c=int(b)
-i=b-c
-a=math.ceil(7*i)
-print(a)
-if a==1:
-    print('ponedelnik')
-elif a==2:
-    print('vtornik')
-elif a==3:
-    print('sreda')
-elif a==4:
-    print('chetverg')
-elif a==5:
-    print('piatnitsa')
-elif a==6:
-    print('sybbota')
+print('vvedite 2 chisla')
+a=int(input('1e chislo'))
+b=int(input('2e chislo'))
+if a>b:
+    b=a
+elif b>a:
+    a=b
 else:
-    print('voskresenie')
+    a=0
+    b=0
+print(a,b,'prilolno, da?')
 
 
-m=int(input('vvedite kolichestvo dnei v promezhytke ot 1 do 365: '))
-o=int(input('vvedite nachalni den nedeli: '))
-b=m%7
-print(b)
-a=b+o-1
-if a==1:
-    print('ponedelnik')
-elif a==2:
-    print('vtornik')
-elif a==3:
-    print('sreda')
-elif a==4:
-    print('chetverg')
-elif a==5:
-    print('piatnitsa')
-elif a==6:
-    print('sybbota')
+print('vvedite 3 chisla ')
+a=int(input('1e chislo '))
+b=int(input('2e chislo '))
+c=int(input('3e chislo '))
+m=max(a,b,c)
+if m==a:
+    n=max(b,c)
+    print(n+m)
+elif m==b:
+    n=max(a,c)
+    print(n+m)
+elif m==c:
+    n=max(b,a)
+    print(n+m)
+
+print('На плоскости расположены три точки: A, B, C. Определить, какая из двух последних точек (B или C) расположена ближе к A, и вывести эту точку и ее расстояние от точки A. ')
+a=int(input('A '))
+b=int(input('B '))
+c=int(input('C '))
+a1=abs(a-b)
+a2=abs(a-c)
+if a2<a1:
+    print('blizhe C')
+    print('rasstoianie ',a2)
+elif a1<a2:
+    print('blizhe B')
+    print('rasstoianie ',a1)
+
+
+
+print('Даны координаты точки, не лежащей на координатных осях OX и OY. Определить номер координатной четверти, в которой находится данная точка')
+x=int(input('X точки '))
+y=int(input('Y точки '))
+if x>0 and y>0:
+    print('v 1i chetveri')
+elif x<0 and y>0:
+    print('v 2i chetveri')
+elif x<0 and y<0:
+    print('v 3i chetveri')
+elif x>0 and y<0:
+    print('v 4i chetveri')
+elif x==0 and y!=0:
+    print('lejit na osi X')
+elif y==0 and x!=0:
+    print('lejit na osi Y')
 else:
-    print('voskresenie')
+    print('v tsentre osei koordinat')
 
 
 
 
-a=int(input('shirina priamoygolnika = '))
-b=int(input('visota priamoygolnika = '))
-c=int(input('razmer grani kyba = '))
-o=a*b
-i1=a/c
-i11=int(i1)
-i2=b/c
-i22=int(i2)
-i3=i22*i11
-i33=a*b-i3*c*c
-print('kolichestvo kvadratov = ',i3)
-print('ostatok = ',i33)
+a=int(input('введите число '))
+if a%2==0 and a>0:
+    print('chetnoe polozhitelnoe')
+elif a%2!=0 and a>0:
+    print('nechetnoe polozhitelnoe')
+elif a%2==0 and a<0:
+    print('chetnoe otritsatelnoe')
+elif a%2!=0 and a<0:
+    print('nechetnoe otritsatelnoe')
+else:
+    print('nolik')
 
 
 
-a=int(input('vvedite god '))
-b=a/100
-b1=int(b)
-b2=int(b+1)
-print('eto ',b2,' vek')
+
+print('vvedite chislo ot 1 do 999')
+a=int(input('введите число '))
+if a%2==0 and a>=1 and a<=9:
+    print('chetnoe odnoznachnoe chislo')
+elif a%2!=0 and a>=1 and a<=9:
+    print('nechetnoe odnoznachnoe chislo')
+elif a%2==0 and a>=10 and a<=99:
+    print('chetnoe dvyznachnoe chislo')
+elif a%2!=0 and a>=10 and a<=99:
+    print('nechetnoe dvyznachnoe chislo')
+elif a%2==0 and a>=100 and a<=999:
+    print('chetnoe trexzbachnoe chislo')
+elif a%2!=0 and a>=100 and a<=999:
+    print('nechetnoe trexznachnoe chislo')
+else:
+    print('figniy vveli  ╮(￣_￣)╭  ')
+
+
