--- a/10я.md
+++ b/10я.md
@@ -1,74 +1,72 @@
-import math
-a=int(input('введите число секунд (целое) '))
-b=a/60
-c=int(b)
-i=b-c
-a=math.ceil(60*i)
-print('убрав минутные отрезки, останетс ',a,' секунд')
-
-
-a=int(input('vvedite kolichestvo dnei v promezhytke ot 1 do 365: '))
-b=a/7
-c=int(b)
-i=b-c
-a=math.ceil(7*i)
-print(a)
-if a==1:
-    print('ponedelnik')
-elif a==2:
-    print('vtornik')
-elif a==3:
-    print('sreda')
-elif a==4:
-    print('chetverg')
-elif a==5:
-    print('piatnitsa')
-elif a==6:
-    print('sybbota')
+print('Справедливо двойное неравенство A < B < C')
+a=int(input())
+b=int(input())
+if a>2 and b<=3:
+    print('vse xorosho')
 else:
-    print('voskresenie')
+    print('nespravedlivo...')
 
 
-m=int(input('vvedite kolichestvo dnei v promezhytke ot 1 do 365: '))
-o=int(input('vvedite nachalni den nedeli: '))
-b=m%7
-print(b)
-a=b+o-1
-if a==1:
-    print('ponedelnik')
-elif a==2:
-    print('vtornik')
-elif a==3:
-    print('sreda')
-elif a==4:
-    print('chetverg')
-elif a==5:
-    print('piatnitsa')
-elif a==6:
-    print('sybbota')
+print('Справедливо двойное неравенство A < B < C')
+a=int(input())
+b=int(input())
+c=int(input())
+if a<b<c:
+    print('vse xorosho')
 else:
-    print('voskresenie')
+    print('nespravedlivo...')
+
+
+print('Данное число является четным двузначным')
+a=int(input())
+if a<100 and a>=10 and a%2==0:
+    print('vse xorosho')
+else:
+    print('nespravedlivo...')
+
+
+print('Цифры данного числа образуют возрастающую или убывающую последовательность')
+a=int(input())
+a1=a//100
+a11=a//10
+a2=a11%10
+a3=a%10
+if a>=100 and a<1000 and (a1>a2>a3 or a1<a2<a3) :
+    print('vse xorosho')
+else:
+    print('nespravedlivo...')
+
+
+print('Данное число читается одинаково слева направо и справа налево')
+a=int(input())
+a2=a%100
+a11=a//100
+b=a11//10
+c=a11%10
+a1=c*10+b
+print(a1,a2)
+if a1==a2:
+    print('yra, zerkalnoe chislo')
+else:
+    print('net')
 
 
 
-
-a=int(input('shirina priamoygolnika = '))
-b=int(input('visota priamoygolnika = '))
-c=int(input('razmer grani kyba = '))
-o=a*b
-i1=a/c
-i11=int(i1)
-i2=b/c
-i22=int(i2)
-i3=i22*i11
-i33=a*b-i3*c*c
-print('kolichestvo kvadratov = ',i3)
-print('ostatok = ',i33)
+print('Треугольник со сторонами a, b, c является прямоугольным')
+a=int(input())
+b=int(input())
+c=int(input())
+if ((a**2+b**2)**0.5==c)==True or ((c**2+b**2)**0.5==a)==True or ((a**2+c**2)**0.5==b)==True:
+    print('yra')
+else:
+    print('o net...')
 
 
-
-a=int(input('vvedite god '))
-b=a/100
-b1=int(b)
-b2=int(b+1)
-print('eto ',b2,' vek')
+print('Даны целые числа a, b, c. Проверить истинность высказывания: «Существует треугольник со сторонами a, b, c»')
+a=int(input())
+b=int(input())
+c=int(input())
+if a+b>c and b+c>a and c+a>b:
+    print('yra')
+else:
+    print('o net...')
