--- a/8я.md
+++ b/8я.md
@@ -11,14 +11,12 @@ a=a/b
 a=int(a)
 print(a,' vot stolko otrezkov B bydet v A')
 
-
 a=int(input('vvedite dliny otrezka A, na kotorom bydyt raspologatsia otrezki dlinoi B (A>B) '))
 b=int(input('vvedite dliny otrezka B '))
-c=a/b
-a=int(c)
-o=c-a
-b=int(o*b)
-print(b,' ostatochek')!!!!!!!!!
+o=a%b
+o1=int(o)
+print(o1,'ostatochek')
+
 
 
 a=int(input('vvedite dvyznachnoe chislo '))
