--- a/11я.md
+++ b/11я.md
@@ -37,7 +37,11 @@ if a2<a1:
     print('rasstoianie ',a2)
 elif a1<a2:
     print('blizhe B')
-    print('rasstoianie ',a1)
+    print('rasstoianie ',a1)!!!!
+    00
+    23
+    -32
+    )))))))))))))))))))
 
 
 
