--- a/16я.md
+++ b/16я.md
@@ -18,10 +18,13 @@ n=int(input('pervii chlen '))
 p=int(input('znamenatel '))
 o=[]
 o.append(n)
-for y in range(a-1) :
-    n=n*p
-    o.append(n)
-print(o)
+if n<=1:
+    print('nado, chtobi N>1 bilo')
+else:
+    for y in range(a - 1):
+        n = n * p
+        o.append(n)
+    print(o)
 
 
 
@@ -31,15 +34,18 @@ print(o)
 
 
 n=int(input('vvedite kolichestvo elemrntov massiva '))
-a=int(input('A'))
-b=int(input("B"))
+a=int(input('A '))
+b=int(input("B "))
 o=[]
 o.append(a)
 o.append(b)
-for y in range(n-2) :
-    x=sum(o)
-    o.append(x)
-print(o)
+if n<=2:
+    print('nado, chtobi N>2 bilo')
+else:
+    for y in range(n - 2):
+        x = sum(o)
+        o.append(x)
+    print(o)
 
 
 
@@ -93,13 +99,12 @@ print(nechet)
 o=len(nechet)-1
 o1=0
 print(o)
-for i in range(len(chet)):
-    itog.append(chet[o1])
-    o1+=1
 for i in range(len(nechet)):
-    itog.append(nechet[o])
+    itog.append(nechet[o1])
+    o1+=1
+for i in range(len(chet)):
+    itog.append(chet[o])
     o-=1
     print(itog)
 print(itog)
 print('0 - eto i ne chetnoe i ne nechetnoe chislo')
-
